--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,43 @@
 {
-    "name": "yiistack/_____",
+    "name": "yiistack/collision",
     "type": "library",
-    "description": "_____",
+    "description": "collision",
     "keywords": [
-        "_____"
+        "collision"
     ],
-    "homepage": "https://www.yiiframework.com/",
+    "homepage": "https://github.com/yiistack/",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/yiistack/_____/issues?state=open",
-        "forum": "https://www.yiiframework.com/forum/",
-        "wiki": "https://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiistack/_____"
+        "issues": "https://github.com/yiistack/collision/issues?state=open",
+        "source": "https://github.com/yiistack/collision"
     },
     "require": {
-        "php": "^7.4"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4",
-        "phan/phan": "^2.4"
+        "phpunit/phpunit": "^9.4",
+        "roave/infection-static-analysis-plugin": "^1.5",
+        "spatie/phpunit-watcher": "^1.23",
+        "vimeo/psalm": "^4.2"
     },
     "autoload": {
         "psr-4": {
-            "Yiistack\\_____\\": "src"
+            "Yiistack\\Collision\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Yiistack\\_____\\Tests\\": "tests"
+            "Yiistack\\Collision\\Tests\\": "tests"
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0.x-dev"
+            "dev-master": "1.0.x-dev"
         }
     },
     "scripts": {
-        "phan": "phan --progress-bar -o analysis.txt"
+        "test": "phpunit --testdox --no-interaction",
+        "test-watch": "phpunit-watcher watch"
     },
     "config": {
         "sort-packages": true
