--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         },
         "config-plugin": {
             "events-console": "config/events-console.php",
-            "providers-console": "config/providers-console.php"
+            "console": "config/console.php"
         }
     },
     "scripts": {
