--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
     "name": "yiistack/collision",
     "type": "library",
-    "description": "collision",
+    "description": "Collision is a Yii extension that provides a set of classes for collision detection.",
     "keywords": [
-        "yii",
-        "collision"
+        "yii3",
+        "collision",
+        "console"
     ],
-    "homepage": "https://github.com/yiistack/",
+    "homepage": "https://github.com/yiistack/collision",
     "license": "MIT",
     "support": {
         "issues": "https://github.com/yiistack/collision/issues?state=open",
@@ -17,15 +18,15 @@
     "require": {
         "php": "^7.4|^8.0",
         "nunomaduro/collision": "^5.1",
-        "yiisoft/di": "dev-master"
+        "yiisoft/di": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
-        "roave/infection-static-analysis-plugin": "^1.5",
+        "phpunit/phpunit": "^9.5",
+        "roave/infection-static-analysis-plugin": "^1.12",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.2",
-        "yiisoft/yii-event": "^1.0.0",
-        "yiisoft/yii-console": "dev-master"
+        "vimeo/psalm": "^4.13",
+        "yiisoft/yii-event": "^1.0",
+        "yiisoft/yii-console": "^1.0"
     },
     "autoload": {
         "psr-4": {
