--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -17,9 +17,6 @@ on:
       - '.gitattributes'
       - 'psalm.xml'
 
-  schedule:
-    - cron: '0 0 * * *'
-
 name: mutation test
 
 jobs:
@@ -35,7 +32,6 @@ jobs:
 
         php:
           - 7.4
-          - 8.0
 
     steps:
       - name: Checkout
@@ -68,7 +64,6 @@ jobs:
 
       - name: Run infection
         run: |
-          git fetch --depth=1 origin $GITHUB_BASE_REF
-          vendor/bin/roave-infection-static-analysis-plugin -j2 --git-diff-filter=A --git-diff-base=origin/$GITHUB_BASE_REF --logger-github --ignore-msi-with-no-mutations --only-covered
+          vendor/bin/roave-infection-static-analysis-plugin -j2 --ignore-msi-with-no-mutations --only-covered
         env:
           STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
