--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "nunomaduro/collision": "^5.1",
         "yiisoft/di": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "roave/infection-static-analysis-plugin": "^1.15",
+        "roave/infection-static-analysis-plugin": "^1.18",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.18",
+        "vimeo/psalm": "^4.22",
         "yiisoft/yii-event": "^1.0",
         "yiisoft/yii-console": "^1.0"
     },
